--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
   <meta charset="UTF-8">
   <title>Pet Fostering</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Content goes here -->
+  <!-- Header -->
+  <header>
+    <h1>PetQuest</h1>
+  </header>
+
+  <!-- Call to Action Banner -->
+  <section class="cta-section">
+    <h2>Foster a Pet, Save a Life</h2>
+    <p>Fostering rescue animals gives them a second chance and prepares them for adoption.</p>
+    <a href="#">Become a Foster</a>
+  </section>
+
+  <!-- Info Section -->
+  <section class="info-section">
+    <img src="img/pet.jpg" alt="Happy foster pet">
+    <div class="info-text">
+      <h3>Why Fostering Matters</h3>
+      <p>Fostering helps reduce overcrowding in shelters and gives animals the care and socialization they need to thrive. You can make a difference today.</p>
+    </div>
+  </section>
 </body>
 </html>
